--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion '28.0.3'
-
+    lintOptions {
+        abortOnError false
+    }
     defaultConfig {
         applicationId "uk.ac.sussex.wear.android.datalogger"
         minSdkVersion 19
@@ -26,4 +28,5 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-location:12.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
