--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '28.0.3'
+    namespace "uk.ac.sussex.wear.android.datalogger"
+    compileSdkVersion 35
     lintOptions {
         abortOnError false
     }
+    buildFeatures {
+        buildConfig = true
+    }
     defaultConfig {
-        applicationId "uk.ac.sussex.wear.android.datalogger"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -31,5 +33,4 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-location:12.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
